[package]
name = "musig-nano"
version = "0.1.0"
edition = "2018"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
curve25519-dalek = "2.0.0"
blake2 = "0.8.1"
rand = "0.7.2"
digest = "0.8.1"

[dev-dependencies]
# fixes a rand error due to thread_rng not being present
ed25519-dalek = { version = "0.9.1", default-features = false, features = ["u64_backend"] }

[features]
wasm = []
